--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
       uses: golangci/golangci-lint-action@v3.6.0
       with:
         version: latest
-        timeout: 10m
+        args: --timeout=30m
 
     - name: Build
       run: make k0sctl
