--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -115,6 +115,11 @@ jobs:
         run: make smoke-basic
 
   smoke-files:
+    strategy:
+      matrix:
+        image:
+          - quay.io/k0sproject/bootloose-ubuntu20.04
+          - quay.io/k0sproject/bootloose-alpine3.18
     name: Basic file upload smoke
     needs: build
     runs-on: ubuntu-20.04
@@ -139,6 +144,10 @@ jobs:
         run: make smoke-files
 
   smoke-dynamic:
+    strategy:
+      matrix:
+        image:
+          - quay.io/k0sproject/bootloose-alpine3.18
     name: Basic dynamic config smoke
     needs: build
     runs-on: ubuntu-20.04
@@ -192,9 +201,6 @@ jobs:
         image:
           - quay.io/k0sproject/bootloose-alpine3.18
           - quay.io/k0sproject/bootloose-amazonlinux2023
-          - quay.io/k0sproject/bootloose-clearlinux
-          - quay.io/k0sproject/bootloose-debian12
-          - quay.io/k0sproject/bootloose-fedora38
           - quay.io/k0sproject/bootloose-rockylinux9
           - quay.io/k0sproject/bootloose-ubuntu20.04
         k0s_from:
@@ -230,10 +236,6 @@ jobs:
       matrix:
         image:
           - quay.io/k0sproject/bootloose-alpine3.18
-          - quay.io/k0sproject/bootloose-amazonlinux2023
-          - quay.io/k0sproject/bootloose-clearlinux
-          - quay.io/k0sproject/bootloose-fedora38
-          - quay.io/k0sproject/bootloose-rockylinux9
           - quay.io/k0sproject/bootloose-ubuntu20.04
 
     name: Apply + reset
@@ -266,8 +268,6 @@ jobs:
       matrix:
         image:
           - quay.io/k0sproject/bootloose-alpine3.18
-          - quay.io/k0sproject/bootloose-amazonlinux2023
-          - quay.io/k0sproject/bootloose-debian12
           - quay.io/k0sproject/bootloose-rockylinux9
           - quay.io/k0sproject/bootloose-ubuntu20.04
 
