--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -230,7 +230,7 @@ jobs:
     strategy:
       matrix:
         image:
-          - quay.io/k0sproject/bootloose-alpine3.18
+          - quay.io/k0sproject/bootloose-rockylinux9
           - quay.io/k0sproject/bootloose-ubuntu20.04
 
     name: Apply + reset
