Add openssh test to workflow
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -109,7 +109,7 @@ jobs:
           LINUX_IMAGE: ${{ matrix.image }}
         run: make smoke-basic
   
-  smoke-basic:
+  smoke-basic-openssh:
     strategy:
       matrix:
         image:
