Update workflow paths
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -4,9 +4,11 @@ on:
   pull_request:
     paths:
       - '**.go'
+      - go.mod
+      - go.sum
       - Makefile
-      - .github
-      - smoke-test
+      - .github/workflows/smoke.yml
+      - smoke-test/**
 
 jobs:
 
