Look for fallback OS support through ID_LIKE field
Signed-off-by: Kimmo Lehto <klehto@mirantis.com>

--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -46,3 +46,5 @@ smoke-os-override: $(bootloose) id_rsa_k0s k0sctl
 smoke-backup-restore: $(bootloose) id_rsa_k0s k0sctl
 	./smoke-backup-restore.sh
 
+%.iid: Dockerfile.%
+	docker build --iidfile '$@' - < '$<'
